@startuml
'https://plantuml.com/class-diagram

abstract class Field
abstract class NameInterface
abstract AbstractCollection
interface Name
interface Phone

NameInterface <|-- Field
Name <|-- NameInterface
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList

class ArrayList {
Object[] elementData
size()
}

class Name{
name: str
show()
}

enum TimeUnit {
DAYS
HOURS
MINUTES
}

@enduml